tests/baselines/reference/privateNameInObjectLiteral-3(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
privateNameInObjectLiteral-3.ts(2,9): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameInObjectLiteral-3.ts(2,9): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== privateNameInObjectLiteral-3.ts (2 errors) ====
    const obj = {
        get #foo() {
            ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
            ~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
            return ""
        }
    };
    